--- a/Schedule/Base.lproj/Main.storyboard
+++ b/Schedule/Base.lproj/Main.storyboard
@@ -131,6 +131,57 @@
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
+        <!--User Schedule Table View Controller-->
+        <scene sceneID="gDq-s7-fIR">
+            <objects>
+                <viewController id="dVf-ul-WaQ" customClass="UserScheduleTableViewController" customModule="Schedule" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="W0D-Jj-blM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wc7-lu-YE8">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="4po-Um-g61">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4po-Um-g61" id="Qnz-L4-78I">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="dVf-ul-WaQ" id="77T-Pu-OhF"/>
+                                    <outlet property="delegate" destination="dVf-ul-WaQ" id="O5T-vg-70m"/>
+                                </connections>
+                            </tableView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="noL-1A-cye">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Edit User Schedule" id="JLc-yu-Khe"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" red="0.97647064924240112" green="0.97647064924240112" blue="0.97647064924240112" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="wc7-lu-YE8" firstAttribute="bottom" secondItem="GjF-dr-cPu" secondAttribute="bottom" id="3Pr-GX-P1S"/>
+                            <constraint firstItem="wc7-lu-YE8" firstAttribute="leading" secondItem="GjF-dr-cPu" secondAttribute="leading" id="FyC-C9-q4G"/>
+                            <constraint firstItem="noL-1A-cye" firstAttribute="top" secondItem="GjF-dr-cPu" secondAttribute="top" id="GYv-UT-9WJ"/>
+                            <constraint firstItem="noL-1A-cye" firstAttribute="centerX" secondItem="W0D-Jj-blM" secondAttribute="centerX" id="MIP-IE-tK5"/>
+                            <constraint firstItem="noL-1A-cye" firstAttribute="leading" secondItem="GjF-dr-cPu" secondAttribute="leading" id="bWB-oe-qzu"/>
+                            <constraint firstItem="wc7-lu-YE8" firstAttribute="top" secondItem="noL-1A-cye" secondAttribute="bottom" id="kKh-Nh-uOa"/>
+                            <constraint firstItem="wc7-lu-YE8" firstAttribute="trailing" secondItem="GjF-dr-cPu" secondAttribute="trailing" id="pSO-HC-f3M"/>
+                            <constraint firstItem="noL-1A-cye" firstAttribute="trailing" secondItem="GjF-dr-cPu" secondAttribute="trailing" id="wRx-hh-vGA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="GjF-dr-cPu"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eEc-RJ-2NB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1028" y="132.68365817091455"/>
+        </scene>
     </scenes>
     <resources>
         <image name="background" width="200" height="300"/>
