--- a/Schedule/Base.lproj/Main.storyboard
+++ b/Schedule/Base.lproj/Main.storyboard
@@ -88,6 +88,9 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <state key="normal" title="Edit Schedule"/>
+                                <connections>
+                                    <segue destination="dVf-ul-WaQ" kind="show" identifier="showEditUserSchedule" id="QEh-xb-ZY5"/>
+                                </connections>
                             </button>
                             <button opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="83q-QD-tnu">
                                 <rect key="frame" x="229" y="590" width="130" height="57"/>
@@ -143,7 +146,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="4po-Um-g61">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserPeriodCell" id="4po-Um-g61">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4po-Um-g61" id="Qnz-L4-78I">
@@ -160,7 +163,13 @@
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="noL-1A-cye">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
-                                    <navigationItem title="Edit User Schedule" id="JLc-yu-Khe"/>
+                                    <navigationItem title="Edit User Schedule" id="JLc-yu-Khe">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="pDP-5B-ECn">
+                                            <connections>
+                                                <segue destination="YDH-wv-Mvx" kind="unwind" unwindAction="exitUserScheduleTableView:" id="Ttb-dI-SRf"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                         </subviews>
@@ -177,8 +186,12 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="GjF-dr-cPu"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="wc7-lu-YE8" id="blv-Tb-ijJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eEc-RJ-2NB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="YDH-wv-Mvx" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1028" y="132.68365817091455"/>
         </scene>
