--- a/Schedule/Base.lproj/Main.storyboard
+++ b/Schedule/Base.lproj/Main.storyboard
@@ -273,7 +273,11 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Calendar" id="kl2-3k-oyO">
-                                        <barButtonItem key="leftBarButtonItem" title="Codes" id="sZb-E6-ahm"/>
+                                        <barButtonItem key="leftBarButtonItem" title="Codes" id="sZb-E6-ahm">
+                                            <connections>
+                                                <action selector="toggleDate" destination="coS-90-xE6" id="YHn-pE-AsE"/>
+                                            </connections>
+                                        </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="6Fn-L9-EAn">
                                             <connections>
                                                 <segue destination="Jeg-vt-2no" kind="unwind" unwindAction="exitCalendar:" id="nb0-o2-G1W"/>
@@ -299,6 +303,7 @@
                         <viewLayoutGuide key="safeArea" id="hEl-KP-kAW"/>
                     </view>
                     <connections>
+                        <outlet property="codeToggleButton" destination="sZb-E6-ahm" id="eNJ-QT-p6t"/>
                         <outlet property="collectionView" destination="z1g-sy-CiZ" id="aWX-Iu-XDV"/>
                     </connections>
                 </viewController>
